fix alignment at login and sign up

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,12 +7,13 @@
 
 body, html {
     background-color: #FFEED9;
-    
-  /*   height: 100%;
     font-family: 'Arial', sans-serif;
+    /*
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center; */
+    align-items: center;
+    */
 }
 
 header {
@@ -90,6 +91,22 @@ h1 {
     font-family: "Eczar";
 }
 
+h2 {
+    font-size: 3em;
+    color: #403930;
+    margin-bottom: 10px;
+    text-align: left;
+    font-family: "Eczar";
+}
+
+h3{
+    font-size: 1.5em;
+    color: #403930;
+    margin-bottom: 10px;
+    text-align: left;
+    font-family: "Eczar";
+}
+
 .buttons {
    
     display: flex;
@@ -126,21 +143,8 @@ h1 {
     cursor: pointer;
     
 }
-
-.home-image{
-    position: relative;
-    
-    width:auto;
-    height: 300px;
-    margin-top: 4%;
-    margin-left: 5%;
-}
-.image-placeholder img {
-    max-width: 100%;
-    height: auto;
-}
 .input-field{
-    width: 100%;
+    width: 40%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
@@ -157,4 +161,25 @@ h1 {
     border-radius: 10px;
     font-size: 1em;
     cursor: pointer;
+}
+.login, .registro-usuario{
+    margin-top: 10%;
+    margin-left: 10%;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    
+}
+.home-image{
+    position: relative;
+    
+    width:auto;
+    height: 300px;
+    margin-top: 4%;
+    margin-left: 5%;
+}
+.image-placeholder img {
+    max-width: 100%;
+    height: auto;
 }
